# base_clis

./: README.md
.github/: dependabot.yml
.github/workflows/: python_ci.yml  rust_ci.yml
py/: README.md  base_cli.py  pyproject.toml  tests.py
py/src/: tests.py
rs/: Cargo.toml  README.md
rs/base_cli/: Cargo.toml
rs/base_cli/src/: base_cli.rs
rs/src/: main.rs
