[build-system]
requires = ["uv_build>=0.8.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "base_cli"
version = "2025.9.29"
description = "A starting point for a base click cli"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Cooper Lees", email = "me@cooperlees.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["click"]

[project.scripts]
base-cli = "base_cli.main:main"

[project.urls]
Documentation = "https://github.com/cooperlees/base_clis/py#readme"
Issues = "https://github.com/cooperlees/base_clis/issues"
Source = "https://github.com/cooperlees/base_clis/py"

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ty]
include = ["src"]
strict = true
